EC-44 fix: add z-index for tui-dropdown-host

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
+tui-dropdown-host {
+  z-index: 2 !important;
+}
